feat: Geração de slides implementada
